hero section finished

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <!-- *** Nav Links *** -->
             <ul class="nav-links-container">
                 <li class="nav-links">
-                    <a href="index.html" class="nav-links-a">Home</a>
+                    <a href="/index.html" class="nav-links-a">Home</a>
                 </li>
                 <li class="nav-links">
-                    <a href="products.html" class="nav-links-a">Products</a>
+                    <a href="/products.html" class="nav-links-a">Products</a>
                 </li>
                 <li class="nav-links">
                     Featured
@@ -34,7 +34,7 @@
             </ul>
 
             <!-- *** Cart Icon *** -->
-                <a class="nav-cart-icon-container href="cart.html">
+                <a class="nav-cart-icon-container" href="/cart.html">
                     <img id="nav-cart-icon"src="/images/icons8-shopping-bag-64.png" alt="Cart">
                     <span class="num-of-cart-items">0</span>
                 </a>
@@ -63,7 +63,23 @@
             </div>
 
             <div class="hero-right">
+                <div class="top-right">
 
+                </div>
+                <div class="bottom-right">
+
+                </div>
+            </div>
+
+            <div class="hero-title-container">
+                <h1 class="hero-title">
+                    Old Is Now New.
+                </h1>
+                <a href="/products.html">
+                    <button id="shop-now">
+                        Shop Now
+                    </button>
+                </a>
             </div>
         </div>
     </div>
