full cart functionality finished

--- a/products.html
+++ b/products.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <!-- Main Styles -->
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="products.css">
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,6 +55,19 @@
             </div>
         </div>
     </nav>
-    
+
+    <div class="products-page">
+        <div class="products-page-container">
+            <h1 class="products-title">
+                Products
+            </h1>
+            <div class="products-container">
+                </div>  
+            </div>
+        </div>
+    </div>
+
+<script src="nav.js"></script> 
+<script src="app.js"></script>
 </body>
 </html>
