--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <!-- Main Styles -->
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="cart.css">
     
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,6 +55,31 @@
           </div>
       </div>
   </nav>
+
+  <div class="cart-wrapper">
+        <div class="cart-container">
+              <h1 class="cart-title">
+                    Cart
+              </h1>
+              <div class="cart-top-sections">
+                    <div class="top-section-container">
+                        <p>Image</p>
+                    </div>
+                    <div class="top-section-container">
+                        <p>Name</p>
+                    </div>
+                    <div class="top-section-container">
+                        <p>Price</p>
+                    </div>       
+              </div>
+              <div class="cart">
+
+              </div>
+              <h1 class="cart-total">
+                    Cart Total: $<span class="cart-total-span">0.00</span>
+              </h1>
+        </div>
+  </div>
 
 <script src="app.js"></script>
 <script src="nav.js"></script>
