this is mt final commit for simple functions

--- a/index.html
+++ b/index.html
@@ -25,12 +25,6 @@
                 <li class="nav-links">
                     <a href="/products.html" class="nav-links-a">Products</a>
                 </li>
-                <li class="nav-links">
-                    Featured
-                </li>
-                <li class="nav-links">
-                    Contact
-                </li>
             </ul>
 
             <!-- *** Cart Icon *** -->
@@ -83,6 +77,39 @@
             </div>
         </div>
     </div>
+
+    <!-- *** Sale Section *** -->
+    <div class="sale-banner">
+        <div class="sale-banner-container">
+            <img id="sale-banner"src="/images/homePageSale.webp" alt="">
+        </div>
+    </div>
+
+    <!-- *** Featured Section *** -->
+    <div class="featured">
+        <div class="featured-container">
+            <div class="featured-top">
+                <div class="featured-top-left">
+                    
+                </div>
+                <div class="featured-top-right">
+                    <h1 class="featured-title">
+                        Kickin' It Old Skool
+                    </h1>
+                    <p class="featured-p">
+                        Throw it back to the 60's with our new line of Old Skool models.
+                    </p>
+                    <button id="shop-now">
+                        Shop Now
+                    </button>
+                </div>
+            </div>
+            <div class="featured-bottom">
+                
+            </div>  
+        </div>
+    </div>
+
 <script src="app.js"></script>
 <script src="nav.js"></script>
 </body>
