link test 3 (bug)

--- a/products.html
+++ b/products.html
@@ -21,10 +21,10 @@
             <!-- *** Nav Links *** -->
             <ul class="nav-links-container">
                 <li class="nav-links">
-                    <a href="https://webdevedd.github.io/VansOffTheWall/" class="nav-links-a">Home</a>
+                    <a href="index.html" class="nav-links-a">Home</a>
                 </li>
                 <li class="nav-links">
-                    <a href="https://webdevedd.github.io/VansOffTheWall/products" class="nav-links-a">Products</a>
+                    <a href="products.html" class="nav-links-a">Products</a>
                 </li>
             </ul>
 
