fixed image and link bugs

--- a/products.html
+++ b/products.html
@@ -16,7 +16,7 @@
     <!-- *** nav bar *** -->
     <nav class="nav-wrapper">
         <div class="nav-container">
-            <img id="nav-logo" src="/images/vans-logo-7845.png" alt="Vans Off The Wall">
+            <img id="nav-logo" src="images/vans-logo-7845.png" alt="Vans Off The Wall">
 
             <!-- *** Nav Links *** -->
             <ul class="nav-links-container">
@@ -29,8 +29,8 @@
             </ul>
 
             <!-- *** Cart Icon *** -->
-                <a class="nav-cart-icon-container" href="/cart.html">
-                    <img id="nav-cart-icon"src="/images/icons8-shopping-bag-64.png" alt="Cart">
+                <a class="nav-cart-icon-container" href="cart.html">
+                    <img id="nav-cart-icon"src="images/icons8-shopping-bag-64.png" alt="Cart">
                     <span class="num-of-cart-items">0</span>
                 </a>
 
