--- a/cart.html
+++ b/cart.html
@@ -16,21 +16,21 @@
       <!-- *** nav bar *** -->
     <nav class="nav-wrapper">
       <div class="nav-container">
-          <img id="nav-logo" src="/images/vans-logo-7845.png" alt="Vans Off The Wall">
+          <img id="nav-logo" src="images/vans-logo-7845.png" alt="Vans Off The Wall">
 
           <!-- *** Nav Links *** -->
           <ul class="nav-links-container">
               <li class="nav-links">
-                  <a href="/index.html" class="nav-links-a">Home</a>
+                  <a href="index.html" class="nav-links-a">Home</a>
               </li>
               <li class="nav-links">
-                  <a href="/products.html" class="nav-links-a">Products</a>
+                  <a href="products.html" class="nav-links-a">Products</a>
               </li>
           </ul>
 
           <!-- *** Cart Icon *** -->
-              <a class="nav-cart-icon-container" href="/cart.html">
-                  <img id="nav-cart-icon"src="/images/icons8-shopping-bag-64.png" alt="Cart">
+              <a class="nav-cart-icon-container" href="cart.html">
+                  <img id="nav-cart-icon"src="images/icons8-shopping-bag-64.png" alt="Cart">
                   <span class="num-of-cart-items">0</span>
               </a>
 
