--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
     <!-- *** nav bar *** -->
     <nav class="nav-wrapper">
         <div class="nav-container">
-            <img id="nav-logo" src="/images/vans-logo-7845.png" alt="Vans Off The Wall">
+            <img id="nav-logo" src="images/vans-logo-7845.png" alt="Vans Off The Wall">
 
             <!-- *** Nav Links *** -->
             <ul class="nav-links-container">
                 <li class="nav-links">
-                    <a href="/index.html" class="nav-links-a">Home</a>
+                    <a href="index.html" class="nav-links-a">Home</a>
                 </li>
                 <li class="nav-links">
-                    <a href="/products.html" class="nav-links-a">Products</a>
+                    <a href="products.html" class="nav-links-a">Products</a>
                 </li>
             </ul>
 
             <!-- *** Cart Icon *** -->
-                <a class="nav-cart-icon-container" href="/cart.html">
-                    <img id="nav-cart-icon"src="/images/icons8-shopping-bag-64.png" alt="Cart">
+                <a class="nav-cart-icon-container" href="cart.html">
+                    <img id="nav-cart-icon"src="images/icons8-shopping-bag-64.png" alt="Cart">
                     <span class="num-of-cart-items">0</span>
                 </a>
 
@@ -69,7 +69,7 @@
                 <h1 class="hero-title">
                     Old Is Now New.
                 </h1>
-                <a href="/products.html">
+                <a href="products.html">
                     <button id="shop-now">
                         Shop Now
                     </button>
@@ -81,7 +81,7 @@
     <!-- *** Sale Section *** -->
     <div class="sale-banner">
         <div class="sale-banner-container">
-            <img id="sale-banner"src="/images/homePageSale.webp" alt="">
+            <img id="sale-banner"src="images/homePageSale.webp" alt="">
         </div>
     </div>
 
